k8s/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: activate-green-svc
  namespace: green
spec:
  selector:
    app: activate
    version: green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
